testdata/baselines/reference/submodule/conformance/jsDeclarationsClassAccessor.errors.txt
argument.js(4,16): error TS8010: Type annotations can only be used in TypeScript files.
argument.js(15,16): error TS8010: Type annotations can only be used in TypeScript files.


==== supplement.d.ts (0 errors) ====
    export { };
    declare module "./argument.js" {
        interface Argument {
            idlType: any;
            default: null;
        }
    }
==== base.js (0 errors) ====
    export class Base {
        constructor() { }
    
        toJSON() {
            const json = { type: undefined, name: undefined, inheritance: undefined };
            return json;
        }
    }
==== argument.js (2 errors) ====
    import { Base } from "./base.js";
    export class Argument extends Base {
        /**
         * @param {*} tokeniser
                   ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
        static parse(tokeniser) {
            return;
        }
    
        get type() {
            return "argument";
        }
    
        /**
         * @param {*} defs
                   ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
        *validate(defs) { }
    }